--- a/app/src/main/res/layout/word_back.xml
+++ b/app/src/main/res/layout/word_back.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<EditText xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/wordWidth"
     android:layout_height="@dimen/wordHeight"
     android:layout_gravity="center"
@@ -8,4 +8,4 @@
     android:gravity="center"
     android:textSize="@dimen/wordSize"
     android:maxLength="54">
-</EditText>
+</TextView>
