--- a/app/src/main/res/layout/word_add_button.xml
+++ b/app/src/main/res/layout/word_add_button.xml
@@ -8,6 +8,7 @@
     android:layout_width="70dp"
     android:layout_height="70dp"
     android:layout_gravity="center"
+    android:layout_marginTop="10dp"
     android:layout_marginBottom="@dimen/wordDistance"
     android:background="@drawable/circle_button"
     android:elevation="10dp"
