--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,23 @@
     tools:openDrawer="start"
     tools:context=".MainActivity">
 
+    <FrameLayout
+        android:id="@+id/contents"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <include
+            layout="@layout/contents_read_mode"
+            android:id="@+id/category"/>
+    </FrameLayout>
+
 <!--    <LinearLayout-->
+<!--        android:id="@+id/contents"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
 <!--        android:orientation="vertical">-->
 <!--        <include layout="@layout/contents_read_mode" />-->
 <!--    </LinearLayout>-->
-
-    <FrameLayout
-        android:id="@id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </FrameLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/categoryNavigation"
@@ -29,7 +34,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/categories" >
+        app:menu="@menu/categories">
     </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
