--- a/app/src/main/res/layout/word_back.xml
+++ b/app/src/main/res/layout/word_back.xml
@@ -4,8 +4,9 @@
     android:layout_height="@dimen/wordHeight"
     android:layout_gravity="center"
     android:background="@drawable/word_back_background"
-    android:fontFamily="@font/font1"
+    android:fontFamily="@font/font2"
     android:gravity="center"
     android:textSize="@dimen/wordSize"
+    android:textColor="@color/black"
     android:maxLength="54">
 </TextView>
