--- a/app/src/main/res/layout/word_front.xml
+++ b/app/src/main/res/layout/word_front.xml
@@ -7,5 +7,6 @@
     android:fontFamily="@font/font1"
     android:gravity="center"
     android:textSize="@dimen/wordSize"
+    android:textColor="@color/black"
     android:maxLength="54">
 </TextView>
