--- a/app/src/main/res/layout/contents_read_mode.xml
+++ b/app/src/main/res/layout/contents_read_mode.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -19,6 +19,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.007"
         app:srcCompat="@android:drawable/ic_menu_manage" />
+
+    <EditText
+        android:id="@+id/categoryTitle"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:ems="10"
+        android:fontFamily="@font/font1"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:text="기본"
+        android:textSize="25dp"
+        android:singleLine="true"
+        android:maxLength="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.001" />
 
     <include
         layout="@layout/contents_category"
