--- a/app/src/main/res/layout/word_and_answer.xml
+++ b/app/src/main/res/layout/word_and_answer.xml
@@ -3,29 +3,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:id="@+id/wordAndAnswerEdit"
-    android:layout_width="370dp"
-    android:layout_height="40dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginBottom="@dimen/wordDistance"
     android:orientation="horizontal">
 
     <EditText
         android:id="@+id/wordEdit"
-        android:layout_width="170dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:layout_marginStart="@dimen/editModeMarginSide"
+        android:layout_marginEnd="@dimen/editModeWordMarginMiddle"
         android:background="@drawable/word_front_background"
         android:ems="10"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="20sp"
+        android:singleLine="true"/>
 
     <EditText
         android:id="@+id/answerEdit"
-        android:layout_width="170dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/editModeAnswerMarginMiddle"
+        android:layout_marginEnd="@dimen/editModeMarginSide"
         android:layout_gravity="center"
-        android:layout_marginStart="30dp"
         android:background="@drawable/word_back_background"
         android:ems="10"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="20sp"
+        android:singleLine="true"/>
 
 </LinearLayout>
