--- a/app/src/main/res/layout/contents_read_mode.xml
+++ b/app/src/main/res/layout/contents_read_mode.xml
@@ -32,6 +32,7 @@
         android:singleLine="true"
         android:text="기본"
         android:textSize="25dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
