--- a/app/src/main/res/layout/word_and_answer.xml
+++ b/app/src/main/res/layout/word_and_answer.xml
@@ -20,6 +20,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:fontFamily="@font/font1"
+        android:textColor="@color/black"
         android:singleLine="true"/>
 
     <EditText
@@ -34,6 +35,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:fontFamily="@font/font2"
+        android:textColor="@color/black"
         android:singleLine="true"/>
 
 </LinearLayout>
